<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for the application. [CHAR LIMIT = 12] -->
    <string name="app_name">JustJava</string>

    <!--hint in name_field Edit Text [CHAR LIMIT = 20]-->
    <string name="hint">Name</string>

    <!--header text fot the list of toppings [CHAR LIMIT = 20]-->
    <string name="toppings">Toppings</string>

    <!--toppings [char limit = 40]-->
    <string name="choose_cream">Whipped cream (1,00 € extra per cup)</string>
    <string name="choose_chocolate">Chocolate (2,00 € extra per cup)</string>

    <!--header text fot quantity selection [CHAR LIMIT = 20]-->
    <string name="quantity">Quantity</string>

    <!--quantity number [CHAR LIMIT = NONE]-->
    <string name="quantity_select" translatable="false">2</string>

    <!--calculated quantity number (int numberOfCoffees) [CHAR LIMIT = NONE]-->
    <string name="number_of_coffees" translatable="false"><xliff:g example="2" id="numberOfCoffees">%d</xliff:g></string>

    <!--toast message: too little coffees in quantity selection [CHAR LIMIT = NONE]-->
    <string name="toast_001">You cannot have less than <xliff:g example="1" id="smallQuantity">%d</xliff:g> coffee</string>

    <!--toast message: too little coffees in quantity selection [CHAR LIMIT = NONE]-->
    <string name="toast_100">You cannot have more than <xliff:g example="100" id="hugeQuantity">%d</xliff:g> coffees</string>

    <!--price description [CHAR LIMIT = 40]-->
    <string name="price_description">Price: 5,00 € per cup, plus extra toppings</string>

    <!--order button label [CHAR LIMIT = 20]-->
    <string name="submit_order">order</string>

    <!--
        name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the user's name. [CHAR LIMIT = NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="userName">%s</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="hasWhippedCream">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="hasChocolate">%b</xliff:g></string>

    <!--
          Total price for the order summary. It will be shown in the format of "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g example="10" id="price">%s</xliff:g></string>

    <!--thank you message for the order summary [CHAR LIMIT = NONE]-->
    <string name="thank_you">Thank you!</string>

    <!--Email subject [CHAR LIMIT = NONE]-->
    <string name="email_subject"> <xliff:g example="JustJava" id="appName">%s</xliff:g> order for  <xliff:g example="Amy" id="userName">%s</xliff:g></string>

</resources>
